--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "teachercan_back"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.2"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
