--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "teachercan_back"}]
 python = "^3.10"
 django = "^4.2"
 djangorestframework = "^3.14.0"
+psycopg2 = "^2.9.6"
 
 
 [build-system]
