--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 django = "^4.2"
 djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.6"
+django-environ = "^0.10.0"
 
 
 [build-system]
