--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.98.0"
 uvicorn = "^0.22.0"
 sqlalchemy = "^2.0.17"
 pyjwt = "^2.7.0"
+email-validator = "^2.0.0.post2"
 
 
 [tool.poetry.group.dev.dependencies]
