--- a/.env.sample
+++ b/.env.sample
@@ -2,14 +2,15 @@
 MUSIXMATCH_API_KEY=
 NAVER_CLIENT_ID=
 NAVER_CLIENT_SECRET=
+NICE_API_KEY=
 
 # Django Settings
 DJANGO_SECRET_KEY=
-ALLOWED_HOSTS=localhost 127.0.0.1
+ALLOWED_HOSTS=
 # in dev
-DEBUG=1
+DEBUG=
 # in production
-DEBUG=0
+DEBUG=
 
 
 # CORS Headers Settings
@@ -23,3 +24,4 @@ DB_HOST=
 
 # JWT
 JWT_SECRET=
+JWT_ALGORITHM=
