--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,15 +26,16 @@ http {
       proxy_redirect off;
       proxy_pass http://admin;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
+      proxy_set_header Host $host;
     }
 
     # app urls
-    location / {
+    location /api/ {
+      rewrite  ^/api/(.*)  /$1 break;
       proxy_redirect off;
       proxy_pass http://app;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $http_host;
+      proxy_set_header Host $host;
     }
 
     # static files
