--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
     }
 
     # app urls
-    location /api/ {
+    location /api {
       if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
@@ -38,7 +38,6 @@ http {
             add_header 'Access-Control-Max-Age' 86400;
             return 204;
       }
-      add_header 'Access-Control-Allow-Origin' '*' always;
       rewrite  ^/api/(.*)  /$1 break;
       proxy_redirect off;
       proxy_pass http://app;
