--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
     location /api {
       if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
             add_header 'Access-Control-Max-Age' 86400;
             return 204;
