--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,7 @@ http {
   server {
     listen 80;
     charset utf-8;
+    server_name teachercan.ssambox.com
 
     # admin urls
     location ~ ^/(admin|static) {
