--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,23 @@ version: "3"
 networks:
   nginx-network:
     driver: bridge
+  db-network:
+    driver: bridge
 
 services:
+  db:
+    container_name: db
+    image: postgres:14
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env
+    networks:
+      - db-network
 
   app:
     container_name: app
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
@@ -15,11 +27,13 @@ services:
     env_file:
       - .env
     volumes:
-      - ./db.sqlite3:/app/db.sqlite3
       - ./app:/app/app
     command: uvicorn app.main:app --host 0.0.0.0 --reload
     networks:
       - nginx-network
+      - db-network
+    depends_on:
+      - db
 
   admin:
     container_name: admin
@@ -30,12 +44,14 @@ services:
     env_file:
       - .env
     volumes:
-      - ./db.sqlite3:/app/db.sqlite3
       - ./config:/app/config
       - ./teachercan:/app/teachercan
     command: python manage.py runserver 0.0.0.0:8000
     networks:
       - nginx-network
+      - db-network
+    depends_on:
+      - db
       
   nginx:
     image: nginx:alpine
@@ -45,8 +61,12 @@ services:
     depends_on:
       - app
       - admin
+      - db
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       # - static:/code/static
     networks:
       - nginx-network
+
+volumes:
+  postgres_data:
