--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,33 +13,12 @@ http {
     server app:8000;
   }
 
-  upstream admin {
-    server admin:8000;
-  }
-
   server {
     listen 80;
     charset utf-8;
     server_name teachercan.ssambox.com;
 
-    # admin urls
-    location ~ ^/(admin|static) {
-      proxy_redirect off;
-      proxy_pass http://admin;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $host;
-    }
-
-    # app urls
-    location /api {
-      if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PUT, PATCH, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-            add_header 'Access-Control-Max-Age' 86400;
-            return 204;
-      }
-      rewrite  ^/api/(.*)  /$1 break;
+    location / {
       proxy_redirect off;
       proxy_pass http://app;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
