--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.0.2"
 django-ninja = "^1.1.0"
 pyjwt = "^2.8.0"
 requests = "^2.31.0"
+django-environ = "^0.11.2"
+pydantic = {extras = ["email"], version = "^2.6.3"}
 
 
 [build-system]
